# OTUScpp

./: .gitignore  .gitmodules  README.md
.github/workflows/: 01-helloworld.yml  02-ip_filter.yml  03-allocator.yml  04-print_ip.yml  05-editor.yml  06-matrix.yml  07-bulk.yml  08-bayan.yml  09-async.yml  10-bulk_server.yml  11-join_server.yml  12-mapreduce.yml  13-fashio_mnist.yml  release.yml
01-homework/: CMakeLists.txt
02-homework/: CMakeLists.txt
02-homework/src/: ip.cpp  ip.h  main.cpp
02-homework/src/utilities/: filter.cpp  filter.h  sort.cpp  sort.h  split.cpp  split.h
02-homework/test/: test.cpp
03-homework/: CMakeLists.txt
03-homework/src/: Allocator.h  List.h  main.cpp
04-homework/: CMakeLists.txt
04-homework/doc/: Doxyfile
04-homework/src/: Doxyfile  Meta.h  PrintIp.h  PrintTuple.h  main.cpp
05-homework/: CMakeLists.txt
05-homework/doc/: Doxyfile
05-homework/lib/: fake.cpp
05-homework/lib/api/: Buttons.h  Document.h  controller.h  model.h  view.h
05-homework/lib/mvc/: Document.h
05-homework/lib/mvc/controller/: controller.h
05-homework/lib/mvc/model/: model.h
05-homework/lib/mvc/view/: Button.h  view.h
05-homework/lib/shapes/: Circle.h  Color.h  Line.h  Point.h  Rectangle.h  Shape.h  Triangle.h
05-homework/src/: controller.cpp  main.cpp  model.cpp  view.cpp
06-homework/: CMakeLists.txt
06-homework/src/: main.cpp  matrix.h
07-homework/: CMakeLists.txt
07-homework/lib/: Bulk.cpp  BulkContainer.cpp  Command.cpp  ConsolePrinter.cpp  ConsoleReader.cpp  FilePrinter.cpp  Moderator.cpp
07-homework/lib/headers/: Bulk.h  BulkContainer.h  Command.h  ConsolePrinter.h  ConsoleReader.h  Moderator.h
07-homework/lib/headers/printers/: FilePrinter.cpp  FilePrinter.h  OstreamPrinter.cpp  OstreamPrinter.h
07-homework/lib/interfaces/: ICommand.cpp
07-homework/src/: main.cpp
08-homework/: CMakeLists.txt
08-homework/lib/: BayanFileParser.h  FilePathHasherator.h  MaskFileParser.h
08-homework/lib/hashes/: CRC32.h
08-homework/lib/interfaces/: IFileParser.h
08-homework/src/: main.cpp
09-homework/: CMakeLists.txt
09-homework/lib/: BulkContainer.cpp  CommandReceiver.cpp  FilePrinter.cpp  Moderator.cpp  OstreamPrinter.cpp
09-homework/lib/headers/: BulkContainer.h  CommandReceiver.h  Moderator.h
09-homework/lib/interfaces/: ICommand.h  IPrinter.h
09-homework/src/: async.cpp  async.h  main.cpp
10-homework/: CMakeLists.txt
10-homework/lib/headers/: CommandReceiver.h  Moderator.h
10-homework/lib/headers/network/: Server.h  Session.h
10-homework/lib/headers/printers/: FilePrinter.h
10-homework/lib/sources/: Bulk.cpp  BulkContainer.cpp  Command.cpp  CommandReceiver.cpp  FilePrinter.cpp  Moderator.cpp  OstreamPrinter.cpp  Server.cpp  Session.cpp
10-homework/src/: main.cpp
11-homework/: CMakeLists.txt
11-homework/lib/headers/: Command.h  Database.h  Message.h  ThreadPool.h
11-homework/lib/headers/network/: Server.h  Session.h
11-homework/lib/sourses/: Command.cpp  Database.cpp  Message.cpp  Server.cpp  Session.cpp  ThreadPool.cpp
11-homework/src/: main.cpp
12-homework/: CMakeLists.txt
12-homework/lib/headers/: Block.h  Maper.h  Mapreduce.h  PrefixFinder.h  Reducer.h  ThreadPool.h
12-homework/lib/sources/: ThreadPool.cpp
12-homework/src/: main.cpp
13-homework/: CMakeLists.txt
13-homework/lib/headers/: AccuracyFinder.h  helpers.h  mlp_classifier.h
13-homework/lib/sources/: AccuracyFinder.cpp  helpers.cpp  mlp_classifier.cpp
13-homework/src/: main.cpp
homework1/: CMakeLists.txt
homework1/src/: main.cpp
homework1/test/: test_version.cpp
